--- a/DsWorkJava/.settings/org.eclipse.wst.common.component
+++ b/DsWorkJava/.settings/org.eclipse.wst.common.component
@@ -9,10 +9,10 @@
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/org.hibernate.dialect"/>
         <wb-resource deploy-path="/" source-path="/web"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/dswork.jdbc4"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/dswork.http"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/dswork.cs"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/dswork.test"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/dswork.jdbc"/>
         <property name="context-root" value="DsWorkJava"/>
         <property name="java-output-path" value="/DsWorkJava/web/WEB-INF/classes"/>
     </wb-module>
