--- a/DsEp/web/html/gzly/html/themes/index.css
+++ b/DsEp/web/html/gzly/html/themes/index.css
@@ -11,7 +11,7 @@ table,td,tr,th{font-size:12px;line-height:normal;}
 .w360{display:block;width:360px;}
 
 ul.list{padding:5px 10px 0px 10px;}
-ul.list li{height:26px;line-height:26px;overflow:hidden;}/*padding-left:12px;background:url(images/icon_list.gif) no-repeat 0 center;*/
+ul.list li{height:26px;line-height:26px;overflow:hidden;}
 ul.list li a{color:#333;}
 ul.list li a:link,ul.list li a:visited{color:#333;outline:none;}
 ul.list li a:hover,ul.list li a:active{color:#ff0000;text-decoration:underline;}
