--- a/DsWorkJava/.settings/org.eclipse.wst.common.component
+++ b/DsWorkJava/.settings/org.eclipse.wst.common.component
@@ -13,6 +13,8 @@
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/dswork.cs"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/dswork.test"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/dswork.jdbc"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/dswork.analyzer"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/dswork.html"/>
         <property name="context-root" value="DsWorkJava"/>
         <property name="java-output-path" value="/DsWorkJava/web/WEB-INF/classes"/>
     </wb-module>
