--- a/DsSSO/portal/web/frame/style/frame.css
+++ b/DsSSO/portal/web/frame/style/frame.css
@@ -1,30 +1,25 @@
-/*IE6背景图片不缓存BUG*/
 * {filter:expression(document.execCommand("BackgroundImageCache", false, true));}
 * {font-size:12px;}
-html,body {height:100%;margin:0px;padding:0px;overflow:hidden;}
-iframe {margin:0px;padding:0px;border:none;width:100%;height:100%;}
-
+html,body {height:100%;width:100%;margin:0px;padding:0px;overflow:hidden;}
+iframe {margin:0;padding:0;border:none;width:100%;height:100%;}
 @font-face {
-	font-family:"dsworkfont";
-	src:url("dsworkfont/dsworkfont.eot");/* IE9+ */
-	src:url('dsworkfont/dsworkfont.eot?#iefix') format('embedded-opentype'),/* IE6-IE8 */
-		url('dsworkfont/dsworkfont.woff') format('woff'),/* chrome,firefox */
-		url('dsworkfont/dsworkfont.ttf') format('truetype'),/* chrome,firefox,opera,Safari,Android,iOS4.2+ */
-		url('dsworkfont/dsworkfont.svg#dsworkfont') format('svg');/* iOS4.1- */
-	font-weight:normal;
-	font-style:normal;
+	font-family:"dsworkfont";font-weight:normal;font-style:normal;
+	src:url("dsworkfont/dsworkfont.eot");
+	src:url('dsworkfont/dsworkfont.eot?#iefix') format('embedded-opentype'),
+		url('dsworkfont/dsworkfont.woff') format('woff'),
+		url('dsworkfont/dsworkfont.ttf') format('truetype'),
+		url('dsworkfont/dsworkfont.svg#dsworkfont') format('svg');
 }
-
 a {font-size:12px;cursor:hand;cursor:pointer;text-decoration:none;}
 a:link {color:#eeeeee;}
 a:visited {color:#eeeeee;}
 a:hover {color:#ffffff;}
 
 #titleDIV {z-index:1;top:0;left:0;color:#ffffff;position:absolute;font-weight:bold;font-family:"黑体", "宋体"}
-div.title    {margin-left:20px;line-height:78px;font-size:28px;}
+div.title    {margin-left:20px;line-height:70px;font-size:28px;}
 div.minititle {margin-left:10px;line-height:28px;font-size:14px;}
 
-.topframe {height:76px;width:100%;background-color:#4c7fbe;top:0;left:0;overflow:hidden;}
+.topframe {height:76px;width:100%;background-color:#003c7b;top:0;left:0;overflow:hidden;}
 .topframe img {border:none;margin:0;padding:0;vertical-align:middle;}
 .topframe i,.topframe b{color:#ffffff;font-style:normal;font-weight:normal;display:inline;vertical-align:baseline;text-decoration:inherit;}
 .topframe i {font-size:16px;font-family:'dsworkfont';height:auto;-webkit-font-smoothing:antialiased;-webkit-text-stroke-width:0.2px;-moz-osx-font-smoothing:grayscale;}
@@ -34,36 +29,29 @@ div.minititle {margin-left:10px;line-height:28px;font-size:14px;}
 .topframe .tool,
 .topframe .minitool{background-color:#6699cc;position:absolute;right:0;height:100%;overflow:hidden;text-align:right;}
 
-.topframe .xtool div{cursor:pointer;background:#4c7fbe;height:100%;text-align:center;vertical-align:middle;display:block;float:left;margin-left:1px;padding:0 5px;}
-.topframe .xtool div:hover{background:#6699cc;}
+.topframe .xtool div{cursor:pointer;background:#003c7b;height:100%;text-align:center;vertical-align:middle;display:block;float:left;padding:0 5px;}
+.topframe .xtool div:hover{background:#376099;}
 .topframe .xtool div img{float:left;}
 .topframe .xtool div i{float:left;}
 .topframe .xtool div b{float:left;font-size:14px;color:#eeeeee;padding:0 3px;font-weight:bold;font-family:"宋体"}
 .topframe .xtool div b:hover{color:#ffffff;}
 
-.topframe .tool div b{display:none;height:76px;line-height:76px;margin:0 12px 0 -12px;}
+.topframe .tool div b{display:none;height:70px;line-height:70px;margin:0 12px 0 -12px;}
 .topframe .tool div b.show{display:inline;}
-.topframe .tool div img {margin:22px 12px;}
-.topframe .tool div img.mini {margin:22px -5px;}
-.topframe .tool div i {margin:22px 12px;font-size:32px;}
-.topframe .tool div i.mini {margin:22px -5px;font-size:32px;}
-
+.topframe .tool div img {margin:20px 12px;}
+.topframe .tool div img.mini {margin:20px -5px;}
+.topframe .tool div i {margin:20px 12px;font-size:32px;}
+.topframe .tool div i.mini {margin:20px -5px;font-size:32px;}
+.topframe .minitool div {padding-left:10px;padding:right:10px;}
 .topframe .minitool div b{display:inline;line-height:26px;}
 .topframe .minitool div img {margin:4px 0 0 0px;}
 .topframe .minitool div i {margin:4px 0 0 0px;font-size:16px;}
 .topframe .minitool div i.mini {margin:4px 0 0 0px;font-size:16px;}
 
-
-.middleframe {border:none;width:100%;height:100%;background-color:#E0ECFF;}
-.middleframe #menu {height:100%;float:left;width:200px;overflow:hidden;border:1px solid #658dcb;border-left:none;}
-.middleframe .drop {height:100%;float:left;position:relative;width:6px;background-color:#E0ECFF;overflow:hidden;}
-.middleframe .drop img {position:absolute;top:50%;cursor:pointer;}
-.middleframe .view {height:100%;background-color:#FEFEFE;overflow:hidden;}
 .icon-closeone{background:url(middle/closeone.png) no-repeat;}
 .icon-closeall{background:url(middle/closeall.png) no-repeat;}
 
-
 .bottomframe {width:100%;height:100%;line-height:25px;color:#ffffff;text-align:center;
-	background-color: #4C7FBE;
+	background-color:#003c7b;
 }
 .bottomframe .copyRight {font-family:Arial;}
