--- a/DsWorkJava/.settings/org.eclipse.wst.common.component
+++ b/DsWorkJava/.settings/org.eclipse.wst.common.component
@@ -15,6 +15,7 @@
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/dswork.jdbc"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/dswork.analyzer"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/dswork.html"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/dswork.webio"/>
         <property name="context-root" value="DsWorkJava"/>
         <property name="java-output-path" value="/DsWorkJava/web/WEB-INF/classes"/>
     </wb-module>
