--- a/CodeBuilder/builder/template/java/base/upd.vm
+++ b/CodeBuilder/builder/template/java/base/upd.vm
@@ -13,7 +13,7 @@
 <%@include file="/commons/include/updAjax.jsp"%>
 <script type="text/javascript">
 ${mf}${Frame.ToLower()}.callback = function(){if($${Frame.ToLower()}.result.type == 1){
-	location.href = "get${Model}.htm?page=${mf}{page}";
+	location.href = "get${Model}.htm?page=${mf}{fn:escapeXml(param.page)}";
 }};
 </script>
 </head>
