--- a/DsCommon/.settings/org.eclipse.wst.common.component
+++ b/DsCommon/.settings/org.eclipse.wst.common.component
@@ -13,6 +13,7 @@
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/dswork.common.flow"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/dswork.common.user.role"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/dswork.common.extends"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/dswork.common.single"/>
 		<property name="context-root" value="DsCommon"/>
 		<property name="java-output-path" value="/DsCommon/web/WEB-INF/classes"/>
 	</wb-module>
