--- a/DsSSO/sso-client/.settings/org.eclipse.wst.common.component
+++ b/DsSSO/sso-client/.settings/org.eclipse.wst.common.component
@@ -4,6 +4,7 @@
         <wb-resource deploy-path="/" source-path="/web" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/dswork.sso"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/dswork.sso.authfilter"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/config"/>
         <property name="java-output-path" value="/sso-client/web/WEB-INF/classes"/>
         <property name="context-root" value="sso-client"/>
     </wb-module>
