--- a/DsSSO/sso/.settings/org.eclipse.wst.common.component
+++ b/DsSSO/sso/.settings/org.eclipse.wst.common.component
@@ -2,6 +2,8 @@
     <wb-module deploy-name="sso">
         <wb-resource deploy-path="/" source-path="/web" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/dswork.sso"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/config"/>
         <property name="java-output-path" value="/sso/web/WEB-INF/classes"/>
         <property name="context-root" value="sso"/>
     </wb-module>
