--- a/DsWorkJava/.settings/org.eclipse.wst.common.component
+++ b/DsWorkJava/.settings/org.eclipse.wst.common.component
@@ -19,6 +19,7 @@
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/dswork-web"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/dswork-webio"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/dswork-ee"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/dswork-parent"/>
         <property name="context-root" value="DsWorkJava"/>
         <property name="java-output-path" value="/DsWorkJava/web/WEB-INF/classes"/>
     </wb-module>
